--- a/.github/workflows/ProgramCodeConvention.yml
+++ b/.github/workflows/ProgramCodeConvention.yml
@@ -24,5 +24,6 @@ jobs:
         run: dotnet tool install -g dotnet-format
 
       - name: Run C# code style check
-        run: dotnet-format --verify-no-changes ProgramCode.cs
+        run: dotnet-format --check --folder .
+
 
